cabal-version:       2.4
name:                webgear-server
version:             1.5.0
synopsis:            Composable, type-safe library to build HTTP API servers
description:
    WebGear is a library to for building composable, type-safe HTTP API servers.
    WebGear focuses on good documentation and usability. See the documentation
    of WebGear module to get started.
homepage:            https://github.com/haskell-webgear/webgear#readme
bug-reports:         https://github.com/haskell-webgear/webgear/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020-2025 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md


source-repository head
  type:      git
  location:  https://github.com/haskell-webgear/webgear


common webgear-common
  default-language:   Haskell2010
  default-extensions: Arrows
                      ConstraintKinds
                      DataKinds
                      DeriveFunctor
                      DeriveGeneric
                      DerivingStrategies
                      DerivingVia
                      FlexibleContexts
                      FlexibleInstances
                      FunctionalDependencies
                      GeneralizedNewtypeDeriving
                      InstanceSigs
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedLists
                      OverloadedStrings
                      PolyKinds
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TemplateHaskellQuotes
                      TypeApplications
                      TypeFamilies
                      TypeOperators
  build-depends:      base >=4.17.0.0 && <4.22
                    , base64-bytestring >=1.2.1.0 && <1.3
                    , bytestring >=0.11.0.0 && <0.13
                    , http-types ==0.12.*
                    , text >=2.0 && <2.2
                    , wai ==3.2.*
                    , webgear-core ^>=1.5.0
  ghc-options:        -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-deriving-strategies
                      -Wmissing-fields
                      -Wmissing-home-modules
                      -Wno-unticked-promoted-constructors
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages
                      -fshow-warning-groups

library
  import:             webgear-common
  exposed-modules:    WebGear.Server
                    , WebGear.Server.Handler
                    , WebGear.Server.MIMETypes
                    , WebGear.Server.Traits
                    , WebGear.Server.Trait.Auth.Basic
                    , WebGear.Server.Trait.Auth.JWT
                    , WebGear.Server.Trait.Body
                    , WebGear.Server.Trait.Cookie
                    , WebGear.Server.Trait.Header
                    , WebGear.Server.Trait.Method
                    , WebGear.Server.Trait.Path
                    , WebGear.Server.Trait.QueryParam
                    , WebGear.Server.Trait.Status
  other-modules:      Paths_webgear_server
  autogen-modules:    Paths_webgear_server
  hs-source-dirs:     src
  build-depends:      aeson >=2.1 && <2.3
                    , arrows ==0.4.*
                    , binary >= 0.8.0.0 && <0.9
                    , cookie >=0.4.5 && <0.6
                    , http-api-data >=0.5 && <0.7
                    , http-media ==0.8.*
                    , jose >=0.10 && <0.12
                    , monad-time >=0.4.0.0 && <0.5
                    , mtl >=2.2 && <2.4
                    , resourcet >=1.2 && <1.4
                    , text-conversions ==0.3.*
                    , wai-extra ==3.1.*

test-suite webgear-server-test
  import:             webgear-common
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      Unit
                    , Unit.Trait.Header
                    , Unit.Trait.Path
                    , Properties
                    , Properties.Trait.Body
                    , Properties.Trait.Header
                    , Properties.Trait.QueryParam
                    , Properties.Trait.Method
                    , Properties.Trait.Path
                    , Properties.Trait.Auth.Basic
  hs-source-dirs:     test
  default-extensions: TemplateHaskell
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
  build-depends:      QuickCheck >=2.14 && <2.16
                    , quickcheck-instances ==0.3.*
                    , tasty >=1.4 && <1.6
                    , tasty-hunit ==0.10.*
                    , tasty-quickcheck >=0.10 && <0.12
                    , webgear-server
