cabal-version:       2.4

name:                webgear-swagger
version:             1.3.0
synopsis:            Composable, type-safe library to build HTTP API servers
description:
    WebGear is a library to for building composable, type-safe HTTP API servers.
    This package can be used to generate Swagger 2.0 specifications from WebGear
    applications.
homepage:            https://github.com/haskell-webgear/webgear#readme
bug-reports:         https://github.com/haskell-webgear/webgear/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2023-2024 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md


source-repository head
  type:      git
  location:  https://github.com/haskell-webgear/webgear


library
  exposed-modules:    WebGear.Swagger
                    , WebGear.Swagger.Handler
                    , WebGear.Swagger.Traits
                    , WebGear.Swagger.Trait.Auth
                    , WebGear.Swagger.Trait.Auth.Basic
                    , WebGear.Swagger.Trait.Auth.JWT
                    , WebGear.Swagger.Trait.Body
                    , WebGear.Swagger.Trait.Cookie
                    , WebGear.Swagger.Trait.Header
                    , WebGear.Swagger.Trait.Method
                    , WebGear.Swagger.Trait.Path
                    , WebGear.Swagger.Trait.QueryParam
                    , WebGear.Swagger.Trait.Status
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: Arrows
                      ConstraintKinds
                      DataKinds
                      DeriveFunctor
                      DeriveGeneric
                      DerivingStrategies
                      DerivingVia
                      FlexibleContexts
                      FlexibleInstances
                      FunctionalDependencies
                      GeneralizedNewtypeDeriving
                      InstanceSigs
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      OverloadedLists
                      PolyKinds
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TemplateHaskellQuotes
                      TypeApplications
                      TypeFamilies
                      TypeOperators
  build-depends:      arrows ==0.4.*
                    , base >=4.13.0.0 && <4.20
                    , http-types ==0.12.*
                    , insert-ordered-containers ==0.2.*
                    , lens >=4.18.1 && <5.3
                    , mtl >=2.2 && <2.4
                    , swagger2 >=2.6 && <2.9
                    , text >=1.2.0.0 && <2.2
                    , webgear-core ^>=1.3.0
  ghc-options:        -Wall
                      -Wno-unticked-promoted-constructors
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-fields
                      -Wmissing-home-modules
                      -Wmissing-deriving-strategies
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages
                      -fshow-warning-groups
